--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
     <body>
         <div class='main'>
             <div class='atbkop'>
-                <div class='atbkoptop'></div>
+                <div class='atbkoptop'>
+                    <div class='piemers'>
+                        <div class='inpiemers'></div>
+                    </div>
+                    <div class='pogukopa'>
+                        <div class='poga'></div>
+                        <div class='poga'></div>
+                        <div class='poga'></div>
+                        <div class='poga'></div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
