--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
             b = a - b
             a = a - b
         }
-        if (s == 0) {
+        if (c == 0) {
             atbildes.push(Math.abs(a + b))
         }
-        else if (s == 1) {
+        else if (c == 1) {
             atbildes.push(Math.abs(a - b))
         }
         atbildes.push(0)
